# ncman

./: CMakeLists.txt  LICENSE
src/: main.c  ncman.c  ncman.h
src/data/: test.json
src/json/: ncman_reader.c
